# talos-forge

./: .gitignore  index.html  worker.js
art/: athen_grid.txt  homer_grid.txt  talos.txt
pkg/: package.json  talos_forge_wasm.d.ts  talos_forge_wasm.js  talos_forge_wasm_bg.wasm  talos_forge_wasm_bg.wasm.d.ts
quant/: Cargo.toml
quant/src/: main.rs
scripts/: deploy.sh
tests/: forge_bench.py  forge_test.py
wasm/: Cargo.toml
wasm/.cargo/: config.toml
wasm/src/: lib.rs
web/: index.html  mnemosyne.idx  worker.js
web/art/: giordano_forge.txt
